@@ -559,6 +559,15 @@
       <!-- HP LaserJet 2 w/PS -->
     </printer>
     <printer>
+      <id>printer/HP-LaserJet_3015</id>
+    </printer>
+    <printer>
+      <id>printer/HP-LaserJet_3020</id>
+    </printer>
+    <printer>
+      <id>printer/HP-LaserJet_3030</id>
+    </printer>
+    <printer>
       <id>printer/HP-LaserJet_3200</id>
     </printer>
     <printer>
@@ -616,7 +625,13 @@
       <id>printer/HP-LaserJet_4300</id>
     </printer>
     <printer>
+      <id>printer/HP-LaserJet_4345_MFP</id>
+    </printer>
+    <printer>
       <id>printer/HP-LaserJet_4350</id>
+    </printer>
+    <printer>
+      <id>printer/HP-LaserJet_4_Plus</id>
     </printer>
     <printer>
       <id>printer/HP-LaserJet_4M</id>
@@ -625,6 +640,12 @@
     <printer>
       <id>printer/HP-LaserJet_4ML</id>
       <!-- HP LaserJet 4ML -->
+    </printer>
+    <printer>
+      <id>printer/HP-LaserJet_4Si</id>
+    </printer>
+    <printer>
+      <id>printer/HP-LaserJet_4V</id>
     </printer>
     <printer>
       <id>printer/HP-LaserJet_5000</id>
@@ -640,6 +661,9 @@
     <printer>
       <id>printer/HP-LaserJet_5MP</id>
       <!-- HP LaserJet 5MP -->
+    </printer>
+    <printer>
+      <id>printer/HP-LaserJet_5Si</id>
     </printer>
     <printer>
       <id>printer/HP-LaserJet_6MP</id>
@@ -672,7 +696,16 @@
       <id>printer/HP-LaserJet_9040_MFP</id>
     </printer>
     <printer>
+      <id>printer/HP-LaserJet_9050</id>
+    </printer>
+    <printer>
       <id>printer/HP-LaserJet_9050_MFP</id>
+    </printer>
+    <printer>
+      <id>printer/HP-LaserJet_9055_MFP</id>
+    </printer>
+    <printer>
+      <id>printer/HP-LaserJet_9065_MFP</id>
     </printer>
     <printer>
       <id>printer/HP-Mopier_240</id>
@@ -681,6 +714,9 @@
     <printer>
       <id>printer/HP-Mopier_320</id>
       <!-- HP Mopier 320 -->
+    </printer>
+    <printer>
+      <id>printer/HP-OfficeJet_9100</id>
     </printer>
     <printer>
       <id>printer/Heidelberg-Digimaster_9110</id>
