@@ -1,5 +1,7 @@
 2005-07-15  Till Kamppeter <till.kamppeter@gmx.net>
 
+	* driver/Postscript.xml: Added missing HP printers.
+
 	* printer/HP-LaserJet_1020.xml: Added the HP LaserJet 1020.
 
 2005-07-13  Till Kamppeter <till.kamppeter@gmx.net>
